--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     section { padding:2em; max-width:800px; margin:auto; }
     h2 { color:#0a3d62; }
     footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
-  </style>
+  <<link rel="stylesheet" href="css/style.css">
+>
 </head>
 <body>
   <header>
