--- a/mission.html
+++ b/mission.html
@@ -12,7 +12,8 @@
     h1, h2 { color:#0a3d62; }
     footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
   </style>
-</head>
+<<link rel="stylesheet" href="css/style.css">
+>
 <body>
   <header>
     <nav>
