--- a/index.html
+++ b/index.html
@@ -4,18 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pulsenettec — The Global Tech Pulse</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
-    header { background:#0a3d62; padding:1em; }
-    nav a { color:#fff; margin:0 1em; text-decoration:none; }
-    .hero { text-align:center; padding:4em 2em; background:#f1f2f6; }
-    .hero h1 { font-size:2.5em; margin-bottom:0.5em; }
-    .hero p { font-size:1.2em; margin-bottom:1em; }
-    section { padding:2em; max-width:800px; margin:auto; }
-    h2 { color:#0a3d62; }
-    footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
-  <<link rel="stylesheet" href="css/style.css">
->
+  <!-- Link to shared stylesheet -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -32,6 +22,7 @@
     <section class="hero">
       <h1>Pulsenettec — The Global Tech Pulse</h1>
       <p>“Pulsenettec strives to build a borderless, trustworthy, sustainable, and intelligent digital nervous system for humanity.”</p>
+      <a href="mission.html" class="cta">Explore Our Mission</a>
     </section>
 
     <section id="mission">
@@ -54,3 +45,4 @@
   </footer>
 </body>
 </html>
+
