--- a/vision.html
+++ b/vision.html
@@ -4,14 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pulsenettec — Vision</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
-    header { background:#0a3d62; padding:1em; }
-    nav a { color:#fff; margin:0 1em; text-decoration:none; }
-    section { padding:2em; max-width:800px; margin:auto; }
-    h1, h2 { color:#0a3d62; }
-    footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -27,23 +20,14 @@
   <main>
     <section>
       <h1>Our Vision</h1>
-      <p>Pulsenettec envisions a future where networking technology transcends boundaries and limitations, creating a truly global digital nervous system for humanity.</p>
+      <p>Pulsenettec envisions a future where networking technology transcends boundaries, creating a truly global digital nervous system for humanity.</p>
     </section>
 
     <section>
       <h2>Unachieved Dreams in Networking</h2>
       <ul>
-        <li><strong>Borderless Connectivity:</strong> Seamless access to information and communication across every corner of the planet.</li>
-        <li><strong>Trustworthy Infrastructure:</strong> Networks built on transparency, accountability, and resilience against misuse.</li>
+        <li><strong>Borderless Connectivity:</strong> Seamless access to information across every corner of the planet.</li>
+        <li><strong>Trustworthy Infrastructure:</strong> Networks built on transparency and resilience against misuse.</li>
         <li><strong>Sustainable Systems:</strong> Energy‑efficient, eco‑friendly networks that minimize environmental impact.</li>
-        <li><strong>Intelligent Autonomy:</strong> Self‑healing, adaptive networks that learn and evolve with human needs.</li>
-        <li><strong>Universal Inclusion:</strong> Ensuring no community or individual is left behind in the digital age.</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
-  </footer>
-</body>
-</html>
+        <li><strong>Intelligent Autonomy:</strong> Self‑healing, adaptive networks that evolve with human needs.</li>
+        <li><strong>Universal Inclusion:</strong> Ensuring no community or individual is left behind in the
