--- a/roadmap.html
+++ b/roadmap.html
@@ -4,15 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pulsenettec — Roadmap</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
-    header { background:#0a3d62; padding:1em; }
-    nav a { color:#fff; margin:0 1em; text-decoration:none; }
-    section { padding:2em; max-width:800px; margin:auto; }
-    h1, h2 { color:#0a3d62; }
-    ul { list-style-type: square; }
-    footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -34,7 +26,7 @@
     <section>
       <h2>Milestones</h2>
       <ul>
-        <li><strong>Foundation:</strong> Establish open‑source repository and public documentation to ensure transparency and collaboration.</li>
+        <li><strong>Foundation:</strong> Establish open‑source repository and public documentation for transparency and collaboration.</li>
         <li><strong>Product:</strong> Launch a global networking dashboard covering connectivity, privacy, latency, sustainability, and autonomy.</li>
         <li><strong>Partnerships:</strong> Build alliances with NGOs, governments, and enterprises to scale adoption and impact.</li>
       </ul>
