--- a/about.html
+++ b/about.html
@@ -4,14 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pulsenettec — About</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
-    header { background:#0a3d62; padding:1em; }
-    nav a { color:#fff; margin:0 1em; text-decoration:none; }
-    section { padding:2em; max-width:800px; margin:auto; }
-    h1, h2 { color:#0a3d62; }
-    footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -51,3 +44,4 @@
   </footer>
 </body>
 </html>
+
