--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pulsenettec — The Global Tech Pulse</title>
-  <!-- Link to shared stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -43,6 +42,8 @@
   <footer>
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
 
