--- a/mission.html
+++ b/mission.html
@@ -4,16 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pulsenettec — Mission</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
-    header { background:#0a3d62; padding:1em; }
-    nav a { color:#fff; margin:0 1em; text-decoration:none; }
-    section { padding:2em; max-width:800px; margin:auto; }
-    h1, h2 { color:#0a3d62; }
-    footer { background:#0a3d62; color:#fff; text-align:center; padding:1em; margin-top:2em; }
-  </style>
-<<link rel="stylesheet" href="css/style.css">
->
+  <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
   <header>
     <nav>
@@ -34,12 +26,12 @@
     <section>
       <h2>Core Pillars</h2>
       <ul>
-        <li><strong>Universal Access:</strong> Ensuring connectivity for every individual, community, and region worldwide.</li>
-        <li><strong>Seamless Interoperability:</strong> Building systems that communicate effortlessly across platforms and borders.</li>
-        <li><strong>Absolute Security & Privacy:</strong> Protecting data integrity and individual rights at every layer.</li>
-        <li><strong>Near‑Zero Latency:</strong> Delivering instant communication and responsiveness across networks.</li>
-        <li><strong>Energy‑Efficient Infrastructure:</strong> Designing sustainable systems that minimize environmental impact.</li>
-        <li><strong>Self‑Healing Networks:</strong> Creating intelligent, adaptive systems that repair and optimize themselves.</li>
+        <li><strong>Universal Access:</strong> Connectivity for every individual and community worldwide.</li>
+        <li><strong>Seamless Interoperability:</strong> Systems that communicate effortlessly across platforms and borders.</li>
+        <li><strong>Absolute Security & Privacy:</strong> Protecting data integrity and individual rights.</li>
+        <li><strong>Near‑Zero Latency:</strong> Instant communication and responsiveness.</li>
+        <li><strong>Sustainability:</strong> Energy‑efficient infrastructure minimizing environmental impact.</li>
+        <li><strong>Self‑Healing Networks:</strong> Adaptive systems that repair and optimize themselves.</li>
       </ul>
     </section>
   </main>
@@ -47,5 +39,8 @@
   <footer>
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
+
