--- a/vision.html
+++ b/vision.html
@@ -26,8 +26,20 @@
     <section>
       <h2>Unachieved Dreams in Networking</h2>
       <ul>
-        <li><strong>Borderless Connectivity:</strong> Seamless access to information across every corner of the planet.</li>
-        <li><strong>Trustworthy Infrastructure:</strong> Networks built on transparency and resilience against misuse.</li>
-        <li><strong>Sustainable Systems:</strong> Energy‑efficient, eco‑friendly networks that minimize environmental impact.</li>
-        <li><strong>Intelligent Autonomy:</strong> Self‑healing, adaptive networks that evolve with human needs.</li>
-        <li><strong>Universal Inclusion:</strong> Ensuring no community or individual is left behind in the
+        <li><strong>Borderless Connectivity:</strong> Seamless access to information everywhere.</li>
+        <li><strong>Trustworthy Infrastructure:</strong> Transparent, resilient networks.</li>
+        <li><strong>Sustainable Systems:</strong> Eco‑friendly, energy‑efficient networks.</li>
+        <li><strong>Intelligent Autonomy:</strong> Self‑healing, adaptive networks.</li>
+        <li><strong>Universal Inclusion:</strong> No community left behind.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
+  </footer>
+
+  <script src="js/script.js"></script>
+</body>
+</html>
+
