--- a/roadmap.html
+++ b/roadmap.html
@@ -26,20 +26,23 @@
     <section>
       <h2>Milestones</h2>
       <ul>
-        <li><strong>Foundation:</strong> Establish open‑source repository and public documentation for transparency and collaboration.</li>
-        <li><strong>Product:</strong> Launch a global networking dashboard covering connectivity, privacy, latency, sustainability, and autonomy.</li>
-        <li><strong>Partnerships:</strong> Build alliances with NGOs, governments, and enterprises to scale adoption and impact.</li>
+        <li><strong>Foundation:</strong> Open‑source repository and public documentation.</li>
+        <li><strong>Product:</strong> Global networking dashboard covering connectivity, privacy, latency, sustainability, autonomy.</li>
+        <li><strong>Partnerships:</strong> Alliances with NGOs, governments, and enterprises.</li>
       </ul>
     </section>
 
     <section>
       <h2>Future Directions</h2>
-      <p>Beyond these milestones, Pulsenettec will expand toward intelligent, self‑healing networks and sustainable infrastructure that adapts to humanity’s evolving needs.</p>
+      <p>Expanding toward intelligent, self‑healing networks and sustainable infrastructure that adapts to humanity’s evolving needs.</p>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
+
