--- a/about.html
+++ b/about.html
@@ -20,28 +20,15 @@
   <main>
     <section>
       <h1>About Pulsenettec</h1>
-      <p>Pulsenettec is a visionary initiative dedicated to building a borderless, trustworthy, sustainable, and intelligent digital nervous system for humanity. We believe networking technology should serve as the pulse of global progress, connecting people, communities, and ideas without barriers.</p>
+      <p>Pulsenettec is a visionary initiative dedicated to building a borderless, trustworthy, sustainable, and intelligent digital nervous system for humanity.</p>
     </section>
 
     <section>
       <h2>Our Story</h2>
-      <p>Founded with the ambition to redefine connectivity, Pulsenettec began as an open‑source project and has grown into a movement. Our roadmap reflects a commitment to transparency, collaboration, and innovation, ensuring that every milestone brings us closer to universal inclusion.</p>
+      <p>Founded with the ambition to redefine connectivity, Pulsenettec began as an open‑source project and has grown into a movement.</p>
     </section>
 
     <section>
       <h2>Our Values</h2>
       <ul>
-        <li><strong>Transparency:</strong> Open documentation and community‑driven development.</li>
-        <li><strong>Collaboration:</strong> Partnerships with NGOs, governments, and enterprises.</li>
-        <li><strong>Sustainability:</strong> Energy‑efficient infrastructure and eco‑friendly practices.</li>
-        <li><strong>Innovation:</strong> Self‑healing, adaptive networks that evolve with human needs.</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
-  </footer>
-</body>
-</html>
-
+        <li><strong>Transparency:</strong
