--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
   <header>
-    <nav>
+    <<header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="mission.html">Mission</a>
+    <a href="vision.html">Vision</a>
+    <a href="roadmap.html">Roadmap</a>
+    <a href="about.html">About</a>
+    <a href="partners.html">Partners</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+>
       <a href="index.html">Home</a>
       <a href="mission.html">Mission</a>
       <a href="vision.html">Vision</a>
