--- a/index.html
+++ b/index.html
@@ -8,38 +8,32 @@
 </head>
 <body>
   <header>
-    <<header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="mission.html">Mission</a>
-    <a href="vision.html">Vision</a>
-    <a href="roadmap.html">Roadmap</a>
-    <a href="about.html">About</a>
-    <a href="partners.html">Partners</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
->
+    <nav>
       <a href="index.html">Home</a>
       <a href="mission.html">Mission</a>
       <a href="vision.html">Vision</a>
       <a href="roadmap.html">Roadmap</a>
       <a href="about.html">About</a>
+      <a href="partners.html">Partners</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
+    <!-- Hero Section -->
     <section class="hero">
       <h1>Pulsenettec — The Global Tech Pulse</h1>
       <p>“Pulsenettec strives to build a borderless, trustworthy, sustainable, and intelligent digital nervous system for humanity.”</p>
       <a href="mission.html" class="cta">Explore Our Mission</a>
     </section>
 
+    <!-- Mission Section -->
     <section id="mission">
       <h2>Mission</h2>
       <p>We advance universal access, seamless interoperability, absolute security and privacy, near‑zero latency, energy‑efficient infrastructure, and self‑healing networks.</p>
     </section>
 
+    <!-- Roadmap Section -->
     <section id="roadmap">
       <h2>Roadmap</h2>
       <ul>
@@ -47,6 +41,19 @@
         <li><strong>Product:</strong> Global networking dashboard (connectivity, privacy, latency, sustainability, autonomy)</li>
         <li><strong>Partnerships:</strong> NGOs, governments, enterprises</li>
       </ul>
+    </section>
+
+    <!-- Live Data Section -->
+    <section id="live-data">
+      <h2>Live Global Metrics</h2>
+      <div>
+        <h3>Global Internet Latency</h3>
+        <p id="latency">Loading latency data...</p>
+      </div>
+      <div>
+        <h3>Sustainability Metrics</h3>
+        <p id="carbon">Loading carbon data...</p>
+      </div>
     </section>
   </main>
 
@@ -57,4 +64,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
