--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <!-- Use script.js1 instead of script.js -->
+  <script src="js/script.js1"></script>
 </body>
 </html>
-
-
