--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
       <a href="vision.html">Vision</a>
       <a href="roadmap.html">Roadmap</a>
       <a href="about.html">About</a>
+      <a href="partners.html">Partners</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -43,7 +45,9 @@
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <!-- Use script.js1 for live metrics -->
+  <script src="js/script.js1"></script>
 </body>
 </html>
+
 
