--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pulsenettec — Contaccontact.htmlcontact.htmlt</title>
+  <title>Pulsenettec — Partners</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,23 +21,22 @@
 
   <main>
     <section>
-      <h1>Contact Us</h1>
-      <p>We’d love to hear from you! Whether you’re interested in partnerships, collaboration, or just want to learn more about Pulsenettec, please reach out using the form below.</p>
+      <h1>Our Partners</h1>
+      <p>Pulsenettec thrives on collaboration. We work with NGOs, governments, enterprises, and innovators to build a sustainable, trustworthy, and intelligent digital nervous system for humanity.</p>
     </section>
 
     <section>
-      <form id="contactForm">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+      <h2>Strategic Collaborations</h2>
+      <ul>
+        <li><strong>NGOs:</strong> Driving inclusion and equitable access to technology.</li>
+        <li><strong>Governments:</strong> Supporting policy frameworks for secure and sustainable networking.</li>
+        <li><strong>Enterprises:</strong> Innovating with industry leaders to advance global connectivity.</li>
+      </ul>
+    </section>
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="5" required></textarea><br><br>
-
-        <button type="submit" class="cta">Send Message</button>
-      </form>
+    <section>
+      <h2>Become a Partner</h2>
+      <p>If your organization shares our vision, we welcome you to join us in shaping the future of networking. Reach out via our <a href="contact.html">Contact page</a> to start the conversation.</p>
     </section>
   </main>
 
@@ -45,6 +44,6 @@
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js1"></script>
 </body>
 </html>
