--- a/partners.html
+++ b/partners.html
@@ -15,28 +15,28 @@
       <a href="roadmap.html">Roadmap</a>
       <a href="about.html">About</a>
       <a href="partners.html">Partners</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
     <section>
       <h1>Our Partners</h1>
-      <p>Pulsenettec collaborates with organizations, enterprises, and communities that share our vision of a borderless, trustworthy, sustainable, and intelligent digital nervous system for humanity.</p>
+      <p>Pulsenettec thrives on collaboration. We work with NGOs, governments, enterprises, and innovators to build a sustainable, trustworthy, and intelligent digital nervous system for humanity.</p>
     </section>
 
     <section>
-      <h2>Strategic Alliances</h2>
+      <h2>Strategic Collaborations</h2>
       <ul>
-        <li><strong>NGOs:</strong> Working together to ensure universal access and inclusion.</li>
-        <li><strong>Governments:</strong> Partnering to build secure, transparent, and resilient infrastructure.</li>
-        <li><strong>Enterprises:</strong> Innovating with industry leaders to advance sustainable and intelligent networking.</li>
-        <li><strong>Communities:</strong> Empowering grassroots initiatives to connect and thrive in the digital age.</li>
+        <li><strong>NGOs:</strong> Driving inclusion and equitable access to technology.</li>
+        <li><strong>Governments:</strong> Supporting policy frameworks for secure and sustainable networking.</li>
+        <li><strong>Enterprises:</strong> Innovating with industry leaders to advance global connectivity.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Future Collaborations</h2>
-      <p>We welcome partnerships with organizations that align with our mission. Together, we can accelerate progress toward a truly global digital nervous system.</p>
+      <h2>Become a Partner</h2>
+      <p>If your organization shares our vision, we welcome you to join us in shaping the future of networking. Reach out via our <a href="contact.html">Contact page</a> to start the conversation.</p>
     </section>
   </main>
 
@@ -44,6 +44,6 @@
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js1"></script>
 </body>
 </html>
