--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pulsenettec — Partners</title>
+  <title>Pulsenettec — Contact</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,22 +21,27 @@
 
   <main>
     <section>
-      <h1>Our Partners</h1>
-      <p>Pulsenettec thrives on collaboration. We work with NGOs, governments, enterprises, and innovators to build a sustainable, trustworthy, and intelligent digital nervous system for humanity.</p>
+      <h1>Contact Us</h1>
+      <p>We’d love to hear from you! Whether you’re interested in partnerships, collaboration, or learning more about Pulsenettec, reach out using the details below.</p>
     </section>
 
     <section>
-      <h2>Strategic Collaborations</h2>
+      <h2>Get in Touch</h2>
       <ul>
-        <li><strong>NGOs:</strong> Driving inclusion and equitable access to technology.</li>
-        <li><strong>Governments:</strong> Supporting policy frameworks for secure and sustainable networking.</li>
-        <li><strong>Enterprises:</strong> Innovating with industry leaders to advance global connectivity.</li>
+        <li><strong>Email:</strong> <a href="mailto:info@pulsenettec.org">info@pulsenettec.org</a></li>
+        <li><strong>Phone:</strong> +254 700 000 000</li>
+        <li><strong>Address:</strong> Nairobi, Kenya</li>
       </ul>
     </section>
 
     <section>
-      <h2>Become a Partner</h2>
-      <p>If your organization shares our vision, we welcome you to join us in shaping the future of networking. Reach out via our <a href="contact.html">Contact page</a> to start the conversation.</p>
+      <h2>Connect Online</h2>
+      <p>Follow us on social media for updates and insights:</p>
+      <ul>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">GitHub</a></li>
+      </ul>
     </section>
   </main>
 
