--- a/roadmap.html
+++ b/roadmap.html
@@ -14,6 +14,8 @@
       <a href="vision.html">Vision</a>
       <a href="roadmap.html">Roadmap</a>
       <a href="about.html">About</a>
+      <a href="partners.html">Partners</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -36,13 +38,23 @@
       <h2>Future Directions</h2>
       <p>Expanding toward intelligent, self‑healing networks and sustainable infrastructure that adapts to humanity’s evolving needs.</p>
     </section>
+
+    <!-- Cross-links to Partners and Contact -->
+    <section class="next-links">
+      <h2>Continue Exploring</h2>
+      <p>Learn more about our collaborations and how to reach us:</p>
+      <ul>
+        <li><a href="partners.html">Our Partners</a></li>
+        <li><a href="contact.html">Get in Touch</a></li>
+      </ul>
+    </section>
   </main>
 
   <footer>
     <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <!-- Use script.js1 for live metrics -->
+  <script src="js/script.js1"></script>
 </body>
 </html>
-
