--- a/contact.html
+++ b/contact.html
@@ -22,25 +22,32 @@
   <main>
     <section>
       <h1>Contact Us</h1>
-      <p>We’d love to hear from you! Whether you’re interested in partnerships, collaboration, or learning more about Pulsenettec, reach out using the details below.</p>
+      <p>We’d love to hear from you! Whether you’re interested in partnerships, collaboration, or learning more about Pulsenettec, reach out using the form below.</p>
+    </section>
+
+    <!-- Contact Form -->
+    <section>
+      <h2>Send Us a Message</h2>
+      <form action="#" method="post" class="contact-form">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+        <button type="submit">Send Message</button>
+      </form>
     </section>
 
     <section>
-      <h2>Get in Touch</h2>
+      <h2>Other Ways to Connect</h2>
       <ul>
         <li><strong>Email:</strong> <a href="mailto:info@pulsenettec.org">info@pulsenettec.org</a></li>
         <li><strong>Phone:</strong> +254 700 000 000</li>
         <li><strong>Address:</strong> Nairobi, Kenya</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Connect Online</h2>
-      <p>Follow us on social media for updates and insights:</p>
-      <ul>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">GitHub</a></li>
       </ul>
     </section>
   </main>
