--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pulsenettec — Contact</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Contact - Pulsenettec</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
@@ -13,49 +12,34 @@
       <a href="mission.html">Mission</a>
       <a href="vision.html">Vision</a>
       <a href="roadmap.html">Roadmap</a>
-      <a href="about.html">About</a>
       <a href="partners.html">Partners</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" class="active">Contact</a>
+      <a href="blog/index.html">Blog</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h1>Contact Us</h1>
-      <p>We’d love to hear from you! Whether you’re interested in partnerships, collaboration, or learning more about Pulsenettec, reach out using the form below.</p>
-    </section>
+    <h1>Contact Us</h1>
+    <p>We’d love to hear from you. Reach out for collaboration or inquiries.</p>
 
-    <!-- Contact Form -->
-    <section>
-      <h2>Send Us a Message</h2>
-      <form action="#" method="post" class="contact-form">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+    <form class="contact-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
 
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="5" required></textarea><br><br>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
 
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
+      <button type="submit">Send Message</button>
+    </form>
 
-    <section>
-      <h2>Other Ways to Connect</h2>
-      <ul>
-        <li><strong>Email:</strong> <a href="mailto:info@pulsenettec.org">info@pulsenettec.org</a></li>
-        <li><strong>Phone:</strong> +254 700 000 000</li>
-        <li><strong>Address:</strong> Nairobi, Kenya</li>
-      </ul>
+    <section class="contact-info">
+      <p>Email: info@pulsenettec.org</p>
+      <p>Placeholder Address</p>
+      <p>Follow us on social media</p>
     </section>
   </main>
-
-  <footer>
-    <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
-  </footer>
-
-  <script src="js/script.js1"></script>
 </body>
 </html>
