--- a/partners.html
+++ b/partners.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pulsenettec — Partners</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Partners - Pulsenettec</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
@@ -13,37 +12,33 @@
       <a href="mission.html">Mission</a>
       <a href="vision.html">Vision</a>
       <a href="roadmap.html">Roadmap</a>
-      <a href="about.html">About</a>
-      <a href="partners.html">Partners</a>
+      <a href="partners.html" class="active">Partners</a>
       <a href="contact.html">Contact</a>
+      <a href="blog/index.html">Blog</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h1>Our Partners</h1>
-      <p>Pulsenettec thrives on collaboration. We work with NGOs, governments, enterprises, and innovators to build a sustainable, trustworthy, and intelligent digital nervous system for humanity.</p>
-    </section>
+    <h1>Our Partners</h1>
+    <p>We collaborate with NGOs, governments, and enterprises to build a sustainable digital future.</p>
 
-    <section>
-      <h2>Strategic Collaborations</h2>
-      <ul>
-        <li><strong>NGOs:</strong> Driving inclusion and equitable access to technology.</li>
-        <li><strong>Governments:</strong> Supporting policy frameworks for secure and sustainable networking.</li>
-        <li><strong>Enterprises:</strong> Innovating with industry leaders to advance global connectivity.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Become a Partner</h2>
-      <p>If your organization shares our vision, we welcome you to join us in shaping the future of networking. Reach out via our <a href="contact.html">Contact page</a> to start the conversation.</p>
+    <section class="partners-grid">
+      <div class="partner-card">
+        <img src="assets/images/placeholder.png" alt="Partner Logo">
+        <h3>NGO Partner</h3>
+        <p>Focus on digital inclusion.</p>
+      </div>
+      <div class="partner-card">
+        <img src="assets/images/placeholder.png" alt="Partner Logo">
+        <h3>Government Partner</h3>
+        <p>Policy and infrastructure support.</p>
+      </div>
+      <div class="partner-card">
+        <img src="assets/images/placeholder.png" alt="Partner Logo">
+        <h3>Enterprise Partner</h3>
+        <p>Technology and innovation collaboration.</p>
+      </div>
     </section>
   </main>
-
-  <footer>
-    <p>&copy; 2025 Pulsenettec — The Global Tech Pulse</p>
-  </footer>
-
-  <script src="js/script.js1"></script>
 </body>
 </html>
