--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
   <header>
-    <nav>
-      <a href="#hero">Home</a>
-      <a href="#mission">Mission</a>
-      <a href="#vision">Vision</a>
-      <a href="#roadmap">Roadmap</a>
-      <a href="#about">About</a>
-      <a href="#partners">Partners</a>
-      <a href="#contact">Contact</a>
-    </nav>
+   <header>
+  <nav>
+    <a href="index.html" class="active">Home</a>
+    <a href="blog/index.html">Blog</a>
+  </nav>
+</header>
+
   </header>
 
   <main>
