--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <p>“Pulsenettec strives to build a borderless, trustworthy, sustainable, and intelligent digital nervous system for humanity.”</p>
       <a href="#mission" class="cta">Explore Our Mission</a>
     </section>
+    <section id="news">
+  <h1>Latest News</h1>
+  <div id="news-feed"></div>
+</section>
+
 
     <!-- Mission Section -->
     <section id="mission">
